@@ -5,16 +5,16 @@ consider-using-alias:20:6:20:22::'typing.Awaitable' will be deprecated with PY39
 consider-using-alias:21:6:21:21::'typing.Iterable' will be deprecated with PY39, consider using 'collections.abc.Iterable' instead:INFERENCE
 consider-using-alias:22:6:22:21::'typing.Hashable' will be deprecated with PY39, consider using 'collections.abc.Hashable' instead:INFERENCE
 consider-using-alias:23:6:23:27::'typing.ContextManager' will be deprecated with PY39, consider using 'contextlib.AbstractContextManager' instead:INFERENCE
-consider-using-alias:24:6:24:20::'typing.Pattern' will be deprecated with PY39, consider using 're.Pattern' instead:INFERENCE
-consider-using-alias:25:7:25:22::'typing.Match' will be deprecated with PY39, consider using 're.Match' instead:INFERENCE
-consider-using-alias:34:9:34:13::'typing.List' will be deprecated with PY39, consider using 'list' instead:INFERENCE
-consider-using-alias:36:7:36:11::'typing.Type' will be deprecated with PY39, consider using 'type' instead:INFERENCE
-consider-using-alias:37:7:37:12::'typing.Tuple' will be deprecated with PY39, consider using 'tuple' instead:INFERENCE
-consider-using-alias:38:7:38:15::'typing.Callable' will be deprecated with PY39, consider using 'collections.abc.Callable' instead:INFERENCE
-consider-using-alias:44:74:44:78:func1:'typing.Dict' will be deprecated with PY39, consider using 'dict' instead:INFERENCE
-consider-using-alias:44:16:44:20:func1:'typing.List' will be deprecated with PY39, consider using 'list' instead:INFERENCE
-consider-using-alias:44:37:44:41:func1:'typing.List' will be deprecated with PY39, consider using 'list' instead:INFERENCE
-consider-using-alias:44:93:44:105:func1:'typing.Tuple' will be deprecated with PY39, consider using 'tuple' instead:INFERENCE
-consider-using-alias:60:12:60:16:CustomNamedTuple:'typing.List' will be deprecated with PY39, consider using 'list' instead:INFERENCE
-consider-using-alias:65:12:65:16:CustomTypedDict2:'typing.List' will be deprecated with PY39, consider using 'list' instead:INFERENCE
-consider-using-alias:69:12:69:16:CustomDataClass:'typing.List' will be deprecated with PY39, consider using 'list' instead:INFERENCE
+consider-using-alias:25:7:25:21::'typing.Pattern' will be deprecated with PY39, consider using 're.Pattern' instead:INFERENCE
+consider-using-alias:27:7:27:22::'typing.Match' will be deprecated with PY39, consider using 're.Match' instead:INFERENCE
+consider-using-alias:36:9:36:13::'typing.List' will be deprecated with PY39, consider using 'list' instead:INFERENCE
+consider-using-alias:38:7:38:11::'typing.Type' will be deprecated with PY39, consider using 'type' instead:INFERENCE
+consider-using-alias:39:7:39:12::'typing.Tuple' will be deprecated with PY39, consider using 'tuple' instead:INFERENCE
+consider-using-alias:40:7:40:15::'typing.Callable' will be deprecated with PY39, consider using 'collections.abc.Callable' instead:INFERENCE
+consider-using-alias:46:74:46:78:func1:'typing.Dict' will be deprecated with PY39, consider using 'dict' instead:INFERENCE
+consider-using-alias:46:16:46:20:func1:'typing.List' will be deprecated with PY39, consider using 'list' instead:INFERENCE
+consider-using-alias:46:37:46:41:func1:'typing.List' will be deprecated with PY39, consider using 'list' instead:INFERENCE
+consider-using-alias:46:93:46:105:func1:'typing.Tuple' will be deprecated with PY39, consider using 'tuple' instead:INFERENCE
+consider-using-alias:62:12:62:16:CustomNamedTuple:'typing.List' will be deprecated with PY39, consider using 'list' instead:INFERENCE
+consider-using-alias:67:12:67:16:CustomTypedDict2:'typing.List' will be deprecated with PY39, consider using 'list' instead:INFERENCE
+consider-using-alias:71:12:71:16:CustomDataClass:'typing.List' will be deprecated with PY39, consider using 'list' instead:INFERENCE
