@@ -19,6 +19,9 @@ Release date: TBA
 
   Closes #6101
 
+* ``consider-using-alias`` will no longer suggest to use ``re.Pattern`` if it used in its
+  generic form if py-version is set below 3.9.
+
 * Added new checker ``typevar-name-mismatch``: TypeVar must be assigned to a variable with the same name as its name argument.
 
   Closes #5224
